[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/upheavtt.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.43298
margin_top = 0.985168
margin_right = -7.43298
margin_bottom = 0.985107
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 312.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
margin_left = 32.0
margin_top = 412.0
margin_right = 288.0
margin_bottom = 668.0
custom_fonts/normal_font = SubResource( 1 )
text = "Controls
W : Jump
A : Left
D : Right
Esc : menu
Goal:
Reach the end.
Kill player to
make blocks!
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 288.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart Level" type="Button" parent="."]
margin_left = 32.0
margin_top = 256.0
margin_right = 288.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 2 )
text = "Restart Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Killself" type="Button" parent="."]
margin_left = 34.0
margin_top = 694.0
margin_right = 290.0
margin_bottom = 822.0
custom_fonts/font = SubResource( 3 )
text = "Kill Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="."]
margin_left = 32.0
margin_top = 928.0
margin_right = 288.0
margin_bottom = 1056.0
custom_fonts/font = SubResource( 4 )
text = "Reset Game"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Restart Level" to="." method="_on_Restart_Level_pressed"]
[connection signal="pressed" from="Killself" to="." method="_on_Killself_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
